# ieee754

./: CMakeLists.txt  Makefile  exec
app/: main.c
include/: fpc.h
inlcude/: convertions.h
src/: CMakeLists.txt  fpc.c  main.c  test.sh
src/app/: CMakeLists.txt
src/fpc/: CMakeLists.txt
src/fpc/tests/: dp_tests.cc  sp_tests.cc
test/: ranges.test  test
tests/: ranges.test
